--- a/package.json
+++ b/package.json
@@ -6,11 +6,17 @@
   "dependencies": {
     "babel-core": "^6.13.2",
     "babel-loader": "^6.2.5",
+    "babel-polyfill": "^6.0.16",
     "babel-preset-es2015": "^6.13.2",
+    "babel-runtime": "^6.11.6",
     "es6-loader": "^0.2.0",
+    "vm-shim": "0.0.6",
     "webpack": "^1.13.2"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "babel-plugin-transform-runtime": "^6.12.0",
+    "babel-preset-stage-0": "^6.5.0"
+  },
   "scripts": {
     "test": "make test"
   },
