--- a/package.json
+++ b/package.json
@@ -10,15 +10,16 @@
     "babel-preset-es2015": "^6.13.2",
     "babel-runtime": "^6.11.6",
     "es6-loader": "^0.2.0",
-    "vm-shim": "0.0.6",
     "webpack": "^1.13.2"
   },
   "devDependencies": {
+    "babel-cli": "^6.11.4",
     "babel-plugin-transform-runtime": "^6.12.0",
-    "babel-preset-stage-0": "^6.5.0"
+    "babel-preset-stage-0": "^6.5.0",
+    "vm-browserify": "0.0.4"
   },
   "scripts": {
-    "test": "make test"
+    "test": "make test" 
   },
   "repository": {
     "type": "git",
