--- a/package.json
+++ b/package.json
@@ -1,22 +1,18 @@
 {
     "name": "snake-game",
     "version": "0.0.1",
-    "description": "Snake game for BrazilJs",
+    "description": "Snake-Game",
     "main": "src/main.js",
     "dependencies": {
-        "babel-core": "^6.13.2",
-        "babel-loader": "^6.2.5",
-        "babel-polyfill": "^6.0.16",
-        "babel-preset-es2015": "^6.13.2",
-        "babel-runtime": "^6.11.6",
-        "es6-loader": "^0.2.0",
-        "webpack": "^1.13.2"
+        "vm-browserify": "0.0.4"
     },
     "devDependencies": {
         "babel-cli": "^6.11.4",
-        "babel-plugin-transform-runtime": "^6.12.0",
-        "babel-preset-stage-0": "^6.5.0",
-        "vm-browserify": "0.0.4"
+        "babel-core": "^6.13.2",
+        "babel-loader": "^6.2.5",
+        "babel-polyfill": "^6.13.0",
+        "babel-preset-es2015": "^6.13.2",
+        "webpack": "^1.13.2"
     },
     "scripts": {
         "test": "make test"
