--- a/package.json
+++ b/package.json
@@ -1,34 +1,37 @@
 {
-    "name": "snake-game",
-    "version": "0.0.1",
-    "description": "Snake-Game",
-    "main": "src/main.js",
-    "dependencies": {
-        "vm-browserify": "^0.0.4"
-    },
-    "devDependencies": {
-        "babel-cli": "^6.11.4",
-        "babel-core": "^6.13.2",
-        "babel-loader": "^6.2.5",
-        "babel-polyfill": "^6.13.0",
-        "babel-preset-es2015": "^6.13.2",
-        "webpack": "^1.13.2"
-    },
-    "scripts": {
-        "test": "make test"
-    },
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/jonathansp/snake-game.git"
-    },
-    "keywords": [
-        "snake",
-        "game"
-    ],
-    "author": "Globo.com",
-    "license": "MIT",
-    "bugs": {
-        "url": "https://github.com/jonathansp/snake-game/issues"
-    },
-    "homepage": "https://github.com/jonathansp/snake-game#readme"
+  "name": "snake-game",
+  "version": "0.0.1",
+  "description": "Snake-Game",
+  "main": "src/main.js",
+  "dependencies": {
+    "loopback-connector-redis": "0.0.3",
+    "redis": "^2.6.2",
+    "strongloop": "^6.0.2",
+    "vm-browserify": "^0.0.4"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.11.4",
+    "babel-core": "^6.13.2",
+    "babel-loader": "^6.2.5",
+    "babel-polyfill": "^6.13.0",
+    "babel-preset-es2015": "^6.13.2",
+    "webpack": "^1.13.2"
+  },
+  "scripts": {
+    "test": "make test"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/jonathansp/snake-game.git"
+  },
+  "keywords": [
+    "snake",
+    "game"
+  ],
+  "author": "Globo.com",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/jonathansp/snake-game/issues"
+  },
+  "homepage": "https://github.com/jonathansp/snake-game#readme"
 }
