feat: snake api functional

--- a/snake-api/server/model-config.json
+++ b/snake-api/server/model-config.json
@@ -35,5 +35,9 @@
   "Player": {
     "dataSource": "snake-db",
     "public": true
+  },
+  "Context": {
+    "dataSource": "snake-db",
+    "public": false
   }
 }
